--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </select>
         <div id="walletAddress" class="mb-3 text-break"></div>
         <div id="qrcode" class="mb-3"></div>
-        <button id="copyButton" class="btn btn-primary mb-3 d-none">Copy Address</button>
+        <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
           <span>
             <a href="http://wpa.qq.com/msgrd?v=3&uin=23426945&site=qq&menu=yes" target="_blank" class="mr-3"><img src="static/icon/QQ.png" title="527315" class="img"></a>
