--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
           <span>
-            <a href="http://wpa.qq.com/msgrd?v=3&uin=23426945&site=qq&menu=yes" target="_blank" class="mr-3"><img
+            <a href="http://wpa.qq.com/msgrd?v=3&uin=527315&site=qq&menu=yes" target="_blank" class="mr-3"><img
                 src="static/icon/QQ.png" title="527315" class="img"></a>
             <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/Twitter.png"
                 title="isoskycn" class="img"></a>
