--- a/index.html
+++ b/index.html
@@ -15,9 +15,26 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 text-center">
         <!--<img src="static/logo.png" alt="Avatar" class="img-fluid">-->
-        <img src="static/icon/logo.png" class="img-responsive center-block img-circle logo-img">
-        <h1>I will be back in</h1>
-        <div id="countdown" class="mb-3 text-break"></div>
+        <img src="static/icon/logo.jpg" class="img-responsive center-block img-circle logo-img">
+        <h1>Suffering! I will be back soon</h1>
+        <div id="countdown-clock" class="mb-3">
+          <div class="time">
+            <span class="days"></span>
+            <small>Days</small>
+          </div>
+          <div class="time">
+            <span class="hours"></span>
+            <small>Hours</small>
+          </div>
+          <div class="time">
+            <span class="minutes"></span>
+            <small>Minutes</small>
+          </div>
+          <div class="time">
+            <span class="seconds"></span>
+            <small>Seconds</small>
+          </div>
+        </div>
         <select id="cryptoSelect" class="form-control mb-3">
           <option style="display:none" selected>Click here to donate,Best wishes</option>
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
@@ -37,11 +54,11 @@
         <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
           <span>
-            <a href="http://wpa.qq.com/msgrd?v=3&uin=527315&site=qq&menu=yes" target="_blank" class="mr-3"><img
-                src="static/icon/QQ.png" title="527315" class="img"></a>
-            <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/Twitter.png"
+            <a href="https://wpa.qq.com/msgrd?v=3&uin=527315&site=qq&menu=yes" target="_blank" class="mr-3"><img
+                src="static/icon/qq.svg" title="527315" class="img"></a>
+            <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/twitter.svg"
                 title="isoskycn" class="img"></a>
-            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/Email.png"
+            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/email.svg"
                 title="isoskycn@gmail.com" class="img"></a>
           </span>
         </div>
