--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
           <option value="bnb">BNB - BNB Chain (also BSC)</option>
           <option value="trx">TRX - Tron (also TRC20)</option>
           <option value="sol">SOL - Solana</option>
-          <option value="ltc">LTC - Dogecoin (also DRC20)</option>
+          <option value="ltc">LTC - Litecoin </option>
           <option value="bch">BCH - Bitcoin Cash</option>
-          <option value="doge">DOGE - Dogecoin</option>
+          <option value="doge">DOGE - Dogecoin (also DRC20)</option>
         </select>
         <div id="walletAddress" class="mb-3 text-break"></div>
         <div id="qrcode" class="mb-3 d-none"></div>
