--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 text-center">
         <!--<img src="static/logo.png" alt="Avatar" class="img-fluid">-->
-        <img src="static/icon/logo.jpg" class="img-responsive center-block img-circle logo-img">
+        <img src="static/icon/logo.jpg" class="img-responsive center-block img-circle logo-img" height="128px" width="128px">
         <h1>Suffering! I will be back soon</h1>
         <div id="countdown-clock" class="mb-3">
           <div class="time">
