--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
-          <option value="btc_TaprootB">BTC - Bitcoin Taproot (also BRC20)</option>
+          <option value="btc_P2TR">BTC - Bitcoin P2TR (also BRC20)</option>
           <option value="eth">ETH - Ethereum (also ERC20)</option>
-          <option value="bnb">BNB - BNB Chain (also BSC)</option>
+          <option value="bnb">BNB - BNB Chain (also BEP20)</option>
           <option value="trx">TRX - Tron (also TRC20)</option>
           <option value="sol">SOL - Solana</option>
           <option value="ltc">LTC - Litecoin </option>
