--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container mt-5">
+  <div class="container container-sm">
     <div class="row">
       <div class="col-md-6 offset-md-3 text-center">
         <!--<img src="static/logo.png" alt="Avatar" class="img-fluid">-->
