--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>isosky</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=yes">
   <link rel="icon" href="static/favicon.ico" />
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/style.css" rel="stylesheet">
@@ -14,7 +14,6 @@
   <div class="container container-sm">
     <div class="row">
       <div class="col-md-6 offset-md-3 text-center">
-        <!--<img src="static/logo.png" alt="Avatar" class="img-fluid">-->
         <img src="static/icon/logo.jpg" class="img-responsive center-block img-circle logo-img" height="128px" width="128px">
         <h1>Suffering! I will be back soon</h1>
         <div id="countdown-clock" class="mb-3">
@@ -54,12 +53,8 @@
         <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
           <span>
-            <a href="https://wpa.qq.com/msgrd?v=3&uin=527315&site=qq&menu=yes" target="_blank" class="mr-3"><img
-                src="static/icon/qq.svg" title="527315" class="img"></a>
-            <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/twitter.svg"
-                title="isoskycn" class="img"></a>
-            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/email.svg"
-                title="isoskycn@gmail.com" class="img"></a>
+            <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/twitter.svg" title="isoskycn" class="img"></a>
+            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/email.svg" title="isoskycn@gmail.com" class="img"></a>
           </span>
         </div>
       </div>
