--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <select id="cryptoSelect" class="form-control mb-3">
-          <option style="display:none" selected>Click here to donate,oh fuck me!</option>
+          <option value="trx" style="display:none" selected>Click here to donate,oh fuck me!</option>
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
