--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>isosky</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=yes">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=yes">
   <link rel="icon" href="static/favicon.ico" />
   <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/style.css" rel="stylesheet">
@@ -53,7 +54,9 @@
         <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
           <span>
+            <a href="https://u.wechat.com/EKvTgRsi8nmJstQ878tZIrc" target="_blank" class="mr-3"><img src="static/icon/wechat.svg" title="isosky" class="img"></a>
             <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/twitter.svg" title="isoskycn" class="img"></a>
+            <a href="https://t.me/isoskycn" target="_blank" class="mr-3"><img src="static/icon/telgram.svg" title="isoskycn" class="img"></a>
             <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/email.svg" title="isoskycn@gmail.com" class="img"></a>
           </span>
         </div>
