--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <select id="cryptoSelect" class="form-control mb-3">
-          <option value="trx" style="display:none" selected>Click here to donate,oh fuck me!</option>
+          <option value="usdt" style="display:none" selected>Click here to donate,oh fuck me!</option>
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
