--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
         </div>
         <select id="cryptoSelect" class="form-control mb-3">
           <option value="usdt" style="display:none" selected>Click here to donate,oh fuck me!</option>
+		  <option value="usdt">USDT - Tron (Select Ethereum or Solana below,if you want)</option>
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
           <option value="btc_P2TR">BTC - Bitcoin P2TR (also BRC20)</option>
           <option value="eth">ETH - Ethereum (also ERC20)</option>
           <option value="bnb">BNB - BNB Chain (also BEP20)</option>
-          <option value="trx">TRX - Tron (also TRC20)</option>
           <option value="sol">SOL - Solana</option>
+		  <option value="trx">TRX - Tron (also TRC20)</option>
           <option value="ltc">LTC - Litecoin </option>
           <option value="bch">BCH - Bitcoin Cash</option>
           <option value="doge">DOGE - Dogecoin (also DRC20)</option>
