--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </div>
         </div>
         <select id="cryptoSelect" class="form-control mb-3">
-          <option value="usdt" style="display:none" selected>Click here to donate,oh fuck me!</option>
-		  <option value="usdt">USDT - Tron (Select Ethereum or Solana below,if you want)</option>
+          <option value="usdt" style="display:none" selected>Click here to donate.Oh fuck me!</option>
+		  <option value="usdt">USDT - Tron (Select Ethereum or Solana below if you want)</option>
           <option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
