--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 		  <option value="trx">TRX - Tron (TRC20)</option>
 		  <option value="doge">DOGE - Dogecoin (DRC20)</option>
           <option value="ltc">LTC - Litecoin </option>
+		  <option value="ton">TON - Ton</option>
         </select>
         <div id="walletAddress" class="mb-3 text-break"></div>
         <div id="qrcode" class="mb-3 d-none"></div>
