update wallet address

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -41,14 +42,14 @@
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>-->
           <option value="btc_Segwit">BTC - Bitcoin Segwit</option>
           <option value="btc_P2TR">BTC - Bitcoin P2TR (BRC20)</option>
-		  <option value="bch">BCH - Bitcoin Cash</option>
           <option value="eth">ETH - Ethereum (ERC20)</option>
           <option value="bnb">BNB - BNB Chain (BEP20)</option>
           <option value="sol">SOL - Solana</option>
 		  <option value="trx">TRX - Tron (TRC20)</option>
 		  <option value="doge">DOGE - Dogecoin (DRC20)</option>
-          <option value="ltc">LTC - Litecoin </option>
 		  <option value="ton">TON - Ton</option>
+          <!--<option value="ltc">LTC - Litecoin </option>
+		  <option value="bch">BCH - Bitcoin Cash</option>-->
         </select>
         <div id="walletAddress" class="mb-3 text-break"></div>
         <div id="qrcode" class="mb-3 d-none"></div>
