update wallet address

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=yes">
   <link rel="icon" href="static/favicon.ico" />
-  <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.3.1/css/bootstrap.min.css" rel="stylesheet">
   <link href="static/style.css" rel="stylesheet">
 </head>
 
@@ -36,7 +36,7 @@
             <small>Seconds</small>
           </div>
         </div>
-        <select id="cryptoSelect" class="form-control mb-3">
+        <select id="cryptoSelect" class="form-select mb-3">
           <option value="usdt" style="display:none" selected>Click here to donate.OH FUCK ME!</option>
           <!--<option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>-->
