--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <small>Seconds</small>
           </div>
         </div>
-        <select id="cryptoSelect" class="form-select mb-3">
+        <select id="cryptoSelect" class="form-select form-select mb-3">
           <option value="usdt" style="display:none" selected>Click here to donate.OH FUCK ME!</option>
           <!--<option value="btc_Legacy">BTC - Bitcoin Legacy</option>
           <option value="btc_P2SH">BTC - Bitcoin P2SH</option>-->
@@ -55,12 +55,10 @@
         <div id="qrcode" class="mb-3 d-none"></div>
         <div class="mb-3"><button id="copyButton" class="btn btn-primary d-none">Copy Address</button></div>
         <div>
-          <span>
             <!--<a href="https://u.wechat.com/EKvTgRsi8nmJstQ878tZIrc" target="_blank" class="mr-3"><img src="static/icon/wechat.svg" title="isosky" class="img"></a>
 			<a href="https://t.me/isoskycn" target="_blank" class="mr-3"><img src="static/icon/telgram.svg" title="isoskycn" class="img"></a>-->
-            <a href="https://twitter.com/isoskycn" target="_blank" class="mr-3"><img src="static/icon/twitter.svg" title="isoskycn" class="img"></a>
-            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="mr-3"><img src="static/icon/email.svg" title="isoskycn@gmail.com" class="img"></a>
-          </span>
+            <a href="https://twitter.com/isoskycn" target="_blank"><img src="static/icon/twitter.svg" title="isoskycn" class="img"></a>
+            <a href="mailto:isosky<isoskycn@gmail.com>" target="_blank" class="col p-3"><img src="static/icon/email.svg" title="isoskycn@gmail.com" class="img"></a>
         </div>
       </div>
     </div>
